[package]
name = "s2n-quic-h3-examples"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
bytes = "1.4.0"
http = "0.2.9"
s2n-quic = { path = "./s2n-quic/quic/s2n-quic/", features = [
  "provider-tls-rustls",
] }
s2n-quic-h3 = { path = "./s2n-quic/quic/s2n-quic-h3/" }
structopt = "0.3.26"
tokio = { version = "1.29.1", default-features = false, features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
  "fs",
  "io-util",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
  "fmt",
  "ansi",
  "env-filter",
  "time",
  "tracing-log",
] }

[[example]]
name = "server"
path = "./src/server.rs"

[[example]]
name = "server-alt"
path = "./src/server-alt.rs"
