[package]
name = "s2n-quic-h3-examples"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
bytes = "1.4.0"
futures = "0.3.28"
h3 = "0.0.2"
http = "0.2.9"
rustls = { version = "0.21.5", features = ["dangerous_configuration"] }
rustls-native-certs = "0.6.3"
rustls-pemfile = "1.0.3"
s2n-quic = { path = "./s2n-quic/quic/s2n-quic/", features = [
  "provider-tls-rustls",
] }
s2n-quic-h3 = { path = "./s2n-quic/quic/s2n-quic-h3/" }
s2n-quic-rustls = { path = "./s2n-quic/quic/s2n-quic-rustls/" }
structopt = "0.3.26"
tokio = { version = "1.29.1", default-features = false, features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
  "fmt",
  "ansi",
  "env-filter",
  "time",
  "tracing-log",
] }

[[example]]
name = "server"
path = "./src/server.rs"

[[example]]
name = "client"
path = "./src/client.rs"

[[example]]
name = "server-alt"
path = "./src/server-alt.rs"
